vw units doesn't get updated inside shadow trees as frame is resized https://bugs.webkit.org/show_bug.cgi?id=216240

Reviewed by NOBODY (OOPS!).

The bug was caused by Document::updateViewportUnitsOnResize only updating the style resolver of the document
and invalidating styles of nodes in the document tree. Fixed the bug by also updating the style resolver in
each shadow tree and invalidating styles of nodes in each tree.

* Source/WebCore/dom/Document.cpp:
(WebCore::Document::updateViewportUnitsOnResize):
* Source/WebCore/style/StyleScope.cpp:
(WebCore::Style::Scope::didChangeViewportSize): Added. Moved from updateViewportUnitsOnResize.
* Source/WebCore/style/StyleScope.h:

* LayoutTests/fast/shadow-dom/shadow-style-invalidation-vw-units-expected.html: Added.
* LayoutTests/fast/shadow-dom/shadow-style-invalidation-vw-units.html: Added.